# iRobMan_Bonus

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_grasp.py  test_perception.py  view_cameras.py  view_object_with_sensors.py  view_with_sensors.sh  view_with_sensors_windows.sh
assets/mujoco_objects/YcbBanana/: textured.xml
assets/mujoco_objects/YcbCrackerBox/: textured.xml
assets/mujoco_objects/YcbFoamBrick/: textured.xml
assets/mujoco_objects/YcbMasterChefCan/: textured.xml
assets/mujoco_objects/YcbMustardBottle/: textured.xml
assets/mujoco_objects/YcbPear/: textured.xml
assets/mujoco_objects/YcbPowerDrill/: textured.xml
assets/mujoco_objects/YcbStrawberry/: textured.xml
assets/mujoco_objects/YcbTennisBall/: textured.xml
assets/mujoco_objects/YcbTomatoSoupCan/: textured.xml
configs/: test_config_mj.yaml
docs/: Actions-control-guide.md  General-information.md  Sensors-data-guide.md  Task-information.md
evaluation_results/: evaluation_overview.txt
giga/: giga_pile.pt
mujoco_menagerie/franka_emika_panda/: mjx_panda.xml  panda.xml
src/mujoco_app/: evaluation.py  exceptions.py  grasp.py  ground_truth.py  ik_solver.py  mj_robot.py  mj_simulation.py  motion_planner.py  perception.py  pose_types.py  robot_controller.py  scene.py  scene_builder.py  task_manager.py  transformations.py
src/vgn/: __init__.py  detection_implicit.py  grasp.py  networks.py  perception.py
src/vgn/ConvONets/: __init__.py  common.py  layers.py
src/vgn/ConvONets/conv_onet/: __init__.py  config.py
src/vgn/utils/: __init__.py  transform.py
(+5 files in other folders)
